# ChangeLog for media-sound/streamtranscoder
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/streamtranscoder/ChangeLog,v 1.7 2007/02/03 20:30:34 flameeyes Exp $

  03 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  07 Aug 2005; Michael Hanselmann <hansmi@gentoo.org>
  streamtranscoder-1.2.4.ebuild:
  Stable on ppc.

  04 May 2005; David Holm <dholm@gentoo.org> streamtranscoder-1.2.8.ebuild:
  Readded to ~ppc. Please don't remove it without filing a proper bug report.

  20 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> :
  new upstream release with major bugfixes. fixes bug #78322.

  18 Dec 2004; Jeremy Huddleston <eradicator@gentoo.org>
  streamtranscoder-1.2.4.ebuild:
  Stable amd64, sparc, x86.

  18 Oct 2004; David Holm <dholm@gentoo.org> streamtranscoder-1.2.4.ebuild:
  Added to ~ppc.

*streamtranscoder-1.2.4 (22 Sep 2004)

  22 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org> +metadata.xml,
  +streamtranscoder-1.2.4.ebuild:
  Ebuild submitted by Evan Borgstrom <evan@mirrored.ca> and adapted to meet
  gentoo ebuild policies by <cparpart@surakware.net>
