@@ -1,3 +1,0 @@
-MD5 9a046ff6aadc62df3598af11dac400b8 streamtranscoder-1.2.8.tar.gz 355078
-RMD160 8a2cfc265104f7da55bd65f3210688cab56e8dc5 streamtranscoder-1.2.8.tar.gz 355078
-SHA256 10fe722d44bd2d0ff02ae9ed5086a4894d98e3c7d234305ff59fa0250a9fd855 streamtranscoder-1.2.8.tar.gz 355078
