@@ -1,0 +1,3 @@
+MD5 e4de56c715ecf5f0d75a0fec4ae8ffce streamtranscoderv3-3.1.11.tar.gz 480731
+RMD160 267a00894f1253a634e25d8e1d39dc2c96bd1c71 streamtranscoderv3-3.1.11.tar.gz 480731
+SHA256 f69cf4b2d5a08c2cc4b6be63053954a55a6fe156877dca49abb37aa962d38e09 streamtranscoderv3-3.1.11.tar.gz 480731
