@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/streamtranscoder
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/streamtranscoder/ChangeLog,v 1.7 2007/02/03 20:30:34 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/streamtranscoder/ChangeLog,v 1.8 2007/07/29 08:57:25 drac Exp $
+
+*streamtranscoder-3.1.11 (29 Jul 2007)
+
+  29 Jul 2007; Samuli Suominen <drac@gentoo.org>
+  +streamtranscoder-3.1.11.ebuild:
+  Version bump for bug 183909, thanks to Lars for reporting.
 
   03 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
